Query constructor add

--- a/WinFormsApp/WinFormsApp.csproj
+++ b/WinFormsApp/WinFormsApp.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InquiryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InquiryForm.Designer.cs">
+      <DependentUpon>InquiryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LinkCreationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="InquiryForm.resx">
+      <DependentUpon>InquiryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LinkCreationForm.resx">
       <DependentUpon>LinkCreationForm.cs</DependentUpon>
     </EmbeddedResource>
