Query constructor add

--- a/WinFormsApp/App.config
+++ b/WinFormsApp/App.config
@@ -10,7 +10,7 @@
   <connectionStrings>
     <add
       name="DefaultContext"
-      connectionString="Data Source=ROG\MSSQLSERVERNICK; Initial Catalog=MetaData; Integrated Security=true"
+      connectionString="Data Source=TERMINATOR; Initial Catalog=MetaData; Integrated Security=true"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
